--- a/main.html
+++ b/main.html
@@ -10,7 +10,11 @@
 <body>
     <h2><b>Prajita's Keypad</b></h2>
     <div class="container">
-      <div class="screen"> </div>
+      <div class="screen"> 
+        <div class="display"></div>
+        <img src="cross.PNG" alt="" style="width: 30px;">
+      </div>
+
       <div class="buttons">
         <button class="button">1</button>
         <button class="button">2</button>
